--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>COSC 360 - Lab 1</title>
+    <link rel="reset" href="css/reset.css" />
+    <link rel="stylesheet" href="css/reset.css" />
   </head>
   <body>
     <h1 id="home">COSC 360</h1>
