Added styles for body, headers, and links

--- a/index.html
+++ b/index.html
@@ -3,24 +3,26 @@
   <head>
     <title>COSC 360 - Lab 1</title>
     <link rel="reset" href="css/reset.css" />
-    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/lab2.css" />
   </head>
   <body>
-    <h1 id="home">COSC 360</h1>
-    <h2>Lab 1 - HTML</h2>
-    <nav>
-      <ul>
-        <li>
-          <a href="#description">Description</a>
-        </li>
-        <li>
-          <a href="#related_photos">Related Photos</a>
-        </li>
-        <li>
-          <a href="#reviews">Reviews</a>
-        </li>
-      </ul>
-    </nav>
+    <header>
+      <h1 id="home">COSC 360</h1>
+      <h2>Lab 2 - CSS</h2>
+      <nav>
+        <ul>
+          <li>
+            <a href="#description">Description</a>
+          </li>
+          <li>
+            <a href="#related_photos">Related Photos</a>
+          </li>
+          <li>
+            <a href="#reviews">Reviews</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <section id="description">
       <h3>Description</h3>
       <p>Photo by Myriams-Fotos</p>
@@ -87,5 +89,5 @@
   <footer>
     <a href="#">Home</a> | <a href="#">Browse</a> | <a href="#">Search</a>
   </footer>
-  <i>Copyright © 2021 COSC Lab 1</i>
+  <i>Copyright © 2021 COSC Lab 2</i>
 </html>
